Fix white space on HomeScreen Footer and line crunching on copyright text

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -16,6 +16,7 @@
 .copyrightFooterText {
     color: var(--minimal);
     font-size: 15px;
+    white-space: nowrap;
 }
 .footerSectionContainer {
     flex: 1;
