--- a/src/sites/Home.css
+++ b/src/sites/Home.css
@@ -2,7 +2,7 @@
     background: var(--background);
     flex: 1;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .homeContainer {
